--- a/style.css
+++ b/style.css
@@ -43,9 +43,48 @@ ul {
   font-size: 1rem;
 }
 
-.topnav a:hover {
+.topnav a:hover,
+.dropdown:hover .dropbtn {
   background-color: grey;
   color: black;
+}
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  background-color: inherit;
+  font-family: inherit;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  font-size: 1rem;
+  margin: 0;
+}
+.dropdown-content {
+  display: none;
+  position: aboslute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  min-width: 73px;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+  position: absolute;
 }
 
 /* BUTTONS */
@@ -56,7 +95,7 @@ ul {
 }
 
 .container-fluid {
-  padding 3% 15% 3%;
+  padding: 3% 15% 3%;
   display: inline-block;
 }
 
